# find_the_human

./: .gitignore  Makefile  README.md  pyproject.toml
src/find_the_human/: game_board.py  game_config.py  game_phase.py  game_status.py
src/find_the_human/player/: player.py  role.py
